--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,14 +1,30 @@
-<ion-header>
-  <ion-navbar>
-    <ion-title>
-      Ionic Blank
-    </ion-title>
-  </ion-navbar>
-</ion-header>
 
-<ion-content padding>
-  Teste!
-  <p>
-    If you get lost, the <a href="http://ionicframework.com/docs/v2">docs</a> will be your guide.
-  </p>
+<ion-grid fixed>
+  <ion-row align-items-center justify-content-center>
+      <ion-col col-12 col-sm-12 col-md-6>
+        <ion-header>
+            <br>
+            <br>
+            <br>
+            <ion-toolbar>
+                <ion-title text-center class="oleo-script">Mourogram</ion-title>
+                <ion-buttons end>
+                    <button ion-button icon-only (click)="showSendPhoto()">
+                      <ion-icon name="camera"></ion-icon>
+                    </button>
+                </ion-buttons>
+            </ion-toolbar>
+          </ion-header>
+      </ion-col>
+  </ion-row>
+</ion-grid>
+
+<ion-content padding class="auto-scroll">
+  <ion-tabs>
+    <ion-tab tabIcon="home" [root]="photosTab"></ion-tab>
+    <ion-tab tabIcon="search" [root]="profileTab"></ion-tab>
+    <ion-tab tabIcon="add-circle" [root]="profileTab"></ion-tab>
+    <ion-tab tabIcon="heart" [root]="profileTab"></ion-tab>
+    <ion-tab tabIcon="contact" [root]="profileTab"></ion-tab>
+  </ion-tabs>
 </ion-content>
