--- a/src/pages/photos/photos.html
+++ b/src/pages/photos/photos.html
@@ -1,18 +1,26 @@
-<!--
-  Generated template for the PhotosPage page.
-
-  See http://ionicframework.com/docs/components/#navigation for more info on
-  Ionic pages and navigation.
--->
-<ion-header>
-
-  <ion-navbar>
-    <ion-title>photos</ion-title>
-  </ion-navbar>
-
-</ion-header>
-
-
-<ion-content padding>
-
+<ion-content padding class="auto-scroll">
+  <ion-grid fixed>
+    <ion-row align-items-center justify-content-center>
+      <ion-col col-12 col-sm-12 col-md-4>
+        <ion-card>
+          <img src="https://picsum.photos/g/500/500/?random" alt="">
+          <ion-card-content>
+            <ion-card-title>Título</ion-card-title>
+            <p>Mensagem</p>
+            <p>
+              <small>postado em 23/03/2018 às 10:00 por
+                <strong>anderson.moouro@gmail.com</strong>
+              </small>
+            </p>
+          </ion-card-content>
+          <ion-row no-padding>
+            <ion-col>
+              <button ion-button clear small color="danger" icon-start>
+                <ion-icon name="pin"></ion-icon>Ver no mapa</button>
+            </ion-col>
+          </ion-row>
+        </ion-card>
+      </ion-col>
+    </ion-row>
+  </ion-grid>
 </ion-content>
