--- a/src/index.html
+++ b/src/index.html
@@ -28,8 +28,8 @@
   </script>-->
 
   <link href="build/main.css" rel="stylesheet">
-  <link href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
-  <link href="https://cdnjs.cloudflare.com/ajax/libs/cssgram/0.1.12/cssgram.min.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
+  <link rel="stylesheet" href="https://cssgram-cssgram.netdna-ssl.com/cssgram.min.css">
 </head>
 <body>
 
