--- a/src/pages/take-picture/take-picture.html
+++ b/src/pages/take-picture/take-picture.html
@@ -1,3 +1,20 @@
+<ion-header>
+  <ion-toolbar>
+    <ion-title text-center class="oleo-script">Mourogram</ion-title>
+    <ion-buttons start>
+      <button ion-button (click)="dismiss()">
+        <ion-icon name="close"></ion-icon>
+      </button>
+    </ion-buttons>
+  </ion-toolbar>
+</ion-header>
+
 <ion-content class="auto-scroll">
-  <h1>Tirar foto</h1>
+  <ion-card>
+    <video id="video" width="100%" autoplay></video>
+    <canvas id="canvas" style="display:none;"></canvas>
+  </ion-card>
+  <div padding>
+    <button ion-button block large outline (click)="takePicture()">Tirar Foto</button>
+  </div>
 </ion-content>
