add user autentication

--- a/src/pages/signup/signup.html
+++ b/src/pages/signup/signup.html
@@ -24,7 +24,7 @@
 <ion-footer>
   <ion-toolbar text-center>
     <ion-buttons>
-      <button small ion-button block (click)="goToLogin()" [disabled]="!form.valid">
+      <button small ion-button block (click)="goToLogin()">
         <small>Já tem conta?&nbsp;<strong>Entrar</strong></small>
       </button>
     </ion-buttons>
