--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -1,31 +1,30 @@
-<ion-content class="auto-scroll">
+<ion-content padding class="auto-scroll">
     <ion-grid fixed>
-        <ion-row align-items-center justify-content-center>
-            <ion-col col-12 col-sm-12 col-md-6>
-                <br>
-                <br>
-                <br>
-                <h1 text-center class='oleo-script logo-title'>Mourogram</h1>
-                <br>
-                <br>
-                <ion-list no-lines>
-                    <ion-item>
-                        <ion-input class='noto-sans' type="email" placeholder="E-mail"></ion-input>
-                    </ion-item>
-                    <ion-item>
-                        <ion-input type="password" placeholder="Senha"></ion-input>
-                    </ion-item>
-                </ion-list>
-                <button ion-button block large outline>Entrar</button>
-            </ion-col>
-        </ion-row>
+      <ion-row align-items-center justify-content-center>
+        <ion-col col-12 col-sm-12 col-md-6>
+          <form [formGroup]="form">
+            <br><br><br>
+            <h1 text-center class="oleo-script logo-title">Mourogram</h1>
+            <br><br>
+            <ion-list no-lines>
+              <ion-item>
+                <ion-input type="email" placeholder="E-mail" maxlength="140" formControlName="email"></ion-input>
+              </ion-item>
+              <ion-item>
+                <ion-input type="password" placeholder="Senha" maxlength="20" formControlName="password"></ion-input>
+              </ion-item>
+            </ion-list>
+            <button ion-button block large outline [disabled]="!form.valid" (click)="submit()">Entrar</button>
+          </form>
+        </ion-col>
+      </ion-row>
     </ion-grid>
-</ion-content>
+  </ion-content>
 
 <ion-footer>
     <ion-toolbar text-center color='secundary'>
         <ion-buttons>
-            <button small ion-button block [navPush]="signUpPage">
+            <button small ion-button block (click)="goToSignup()">
                 <small>Ainda não tem conta?&nbsp;<strong>Cadastre-se</strong></small>
             </button>
         </ion-buttons>
