sending data to firebase

--- a/src/pages/send-photo/send-photo.html
+++ b/src/pages/send-photo/send-photo.html
@@ -20,14 +20,16 @@
     </ion-slides>
 
     <ion-card-content>
-          <ion-list no-lines>
-            <ion-item>
-              <ion-input type="text" placeholder="Título" maxlength="40"></ion-input>
-            </ion-item>
-            <ion-item>
-              <ion-textarea placeholder="Mensagem" rows="3" maxlength="255"></ion-textarea>
-            </ion-item>
-          </ion-list>
+      <form [formGroup]="form">
+        <ion-list no-lines>
+          <ion-item>
+            <ion-input type="text" placeholder="Título" maxlength="40" formControlName="title"></ion-input>
+          </ion-item>
+          <ion-item>
+            <ion-textarea placeholder="Mensagem" rows="3" maxlength="255" formControlName="message"></ion-textarea>
+          </ion-item>
+        </ion-list>
+      </form>
     </ion-card-content>
 
     <ion-row no-padding>
@@ -40,7 +42,7 @@
   </ion-card>
 
   <div padding>
-    <button ion-button block large outline>Enviar</button>
+    <button ion-button block large outline [disabled]="!form.valid" (click)="submit()">Enviar</button>
   </div>
 
 </ion-content>
