list photos from server

--- a/src/pages/photos/photos.html
+++ b/src/pages/photos/photos.html
@@ -1,22 +1,22 @@
 <ion-content padding class="auto-scroll">
   <ion-grid fixed>
     <ion-row align-items-center justify-content-center>
-      <ion-col col-12 col-sm-12 col-md-4>
+      <ion-col col-12 col-sm-12 col-md-4 *ngFor= "let photo of photos" class="animated zoomIn">
         <ion-card>
-          <img src="https://picsum.photos/g/500/500/?random" alt="">
+          <img src="{{ photo.image }}" alt="{{ photo.title }}" class="{{ photo.filter }}">
           <ion-card-content>
-            <ion-card-title>Título</ion-card-title>
-            <p>Mensagem</p>
+            <ion-card-title>{{ photo.title }}</ion-card-title>
+            <p>{{ photo.message }}</p>
             <p>
-              <small>postado em 23/03/2018 às 10:00 por
-                <strong>anderson.moouro@gmail.com</strong>
+              <small>postado em {{ photo.date | date: 'dd/MM/yyyy HH:mm'}} por
+                <strong>{{ photo.user }}</strong>
               </small>
             </p>
           </ion-card-content>
           <ion-row no-padding>
             <ion-col>
-              <button ion-button clear small color="danger" icon-start>
-                <ion-icon name="pin"></ion-icon>Ver no mapa</button>
+              <button ion-button clear small color="danger" icon-start *ngIf="photo.location != ''" (click)="showMap(photo.location)"><ion-icon  name='pin'>Ver no mapa</ion-icon></button>
+              <button ion-button clear small color="danger" icon-start *ngIf="photo.location == ''"><ion-icon  name='pin'>Localização não disponível</ion-icon></button>
             </ion-col>
           </ion-row>
         </ion-card>
